apps/reedme/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: reedme
    app.kubernetes.io/name: reedme
  name: reedme
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: reedme
    app.kubernetes.io/name: reedme
  type: ClusterIP
